--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -9,28 +9,24 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="396dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
         android:fontFamily="@font/alegreya_sc"
         android:text="Be Smart &amp; Stop the ALARM"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvQstn"
-        android:layout_width="311dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
         android:fontFamily="@font/alegreya_sc"
         android:text="What is the 14th letter of alphabet ?"
         android:textAlignment="center"
@@ -43,11 +39,11 @@
 
     <RadioGroup
         android:id="@+id/radioGroupQstn"
-        android:layout_width="322dp"
-        android:layout_height="212dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvQstn">
@@ -55,7 +51,7 @@
         <RadioButton
             android:id="@+id/a1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:buttonTint="#FFFFFF"
             android:fontFamily="@font/alegreya_sc"
@@ -68,7 +64,7 @@
         <RadioButton
             android:id="@+id/a2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:buttonTint="#FFFFFF"
             android:fontFamily="@font/alegreya_sc"
@@ -81,7 +77,7 @@
         <RadioButton
             android:id="@+id/a3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:buttonTint="#FFFFFF"
             android:fontFamily="@font/alegreya_sc"
@@ -94,7 +90,7 @@
         <RadioButton
             android:id="@+id/a4"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:buttonTint="#FFFFFF"
             android:fontFamily="@font/alegreya_sc"
@@ -107,58 +103,46 @@
 
     <Button
         android:id="@+id/btnStop"
-        android:layout_width="172dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="124dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="48dp"
         android:background="#012629"
         android:fontFamily="@font/alegreya_sc"
         android:text="STOP ALARM"
         android:textColor="#77D8D0"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvResult" />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvResult"
-        android:layout_width="317dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:fontFamily="@font/alegreya_sc"
         android:textAlignment="center"
         android:textColor="#2CF106"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroupQstn" />
-
-    <View
-        android:id="@+id/divider3"
-        android:layout_width="395dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnStop" />
+        app:layout_constraintBottom_toTopOf="@+id/btnStop"
+        tools:layout_editor_absoluteX="86dp" />
 
     <TextView
         android:id="@+id/textViewNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginEnd="16dp"
         android:text="1"
         android:textAlignment="center"
         android:textColor="#012629"
         android:textSize="80sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/tvQstn"
+        app:layout_constraintEnd_toStartOf="@+id/tvQstn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tvQstn" />
 </android.support.constraint.ConstraintLayout>
