--- a/app/src/main/res/layout/add_alarm.xml
+++ b/app/src/main/res/layout/add_alarm.xml
@@ -26,25 +26,25 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="12dp"
         android:backgroundTint="#000000"
         android:foregroundTint="#000000"
         android:headerBackground="@color/common_google_signin_btn_text_dark_focused"
         android:numbersSelectorColor="#0A0A0A"
         android:timePickerMode="spinner"
+        app:layout_constraintBottom_toTopOf="@+id/etName"
+        app:layout_constraintDimensionRatio="w,5:3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/etName"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="48dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="56dp"
         android:autofillHints=""
         android:backgroundTint="#000000"
         android:ems="10"
@@ -56,6 +56,7 @@
         android:textColorHighlight="#4B0A0A0A"
         android:textColorLink="#000000"
         android:textCursorDrawable="@null"
+        app:layout_constraintBottom_toTopOf="@+id/btnTone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timePicker"
@@ -65,22 +66,24 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/alegreya_sc"
         android:text="@string/tone"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnTone"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/btnTone"
+        app:layout_constraintEnd_toStartOf="@+id/btnTone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnTone" />
 
     <Button
         android:id="@+id/btnAdd"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="@font/alegreya_sc"
         android:text="@string/add"
         android:textColor="#000000"
@@ -89,17 +92,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,3:1"
         app:layout_constraintEnd_toStartOf="@+id/btnCancel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnCancel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="@font/alegreya_sc"
         android:text="@string/cancel"
         android:textColor="#000000"
@@ -108,22 +109,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,3:1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnAdd"
-        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />
+        app:layout_constraintStart_toEndOf="@+id/btnAdd" />
 
     <Button
         android:id="@+id/btnTone"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="56dp"
         android:drawableEnd="@drawable/ic_down_arrow"
         android:fontFamily="@font/alegreya_sc"
         android:text="@string/select_alarm_tone"
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/etName" />
@@ -132,24 +132,28 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/alegreya_sc"
-        android:text="Quiz Count"
+        android:text="Quiz Count :"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/numberPicker"
+        app:layout_constraintEnd_toStartOf="@+id/numberPicker"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/numberPicker" />
 
     <NumberPicker
         android:id="@+id/numberPicker"
         android:layout_width="0dp"
-        android:layout_height="104dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="48dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="#000000"
         android:foregroundTint="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/btnTone" />
