--- a/app/src/main/res/layout/single_alarm_card.xml
+++ b/app/src/main/res/layout/single_alarm_card.xml
@@ -15,8 +15,8 @@
 
         <TextView
             android:id="@+id/alarmTimeView"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -25,7 +25,7 @@
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:textSize="30sp"
+            android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,11 +33,12 @@
 
         <TextView
             android:id="@+id/alarmNameView"
-            android:layout_width="112dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="16dp"
             android:fontFamily="@font/alegreya_sc"
             android:text="TextView"
             android:textAlignment="viewStart"
@@ -45,13 +46,14 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/alram_switch"
             app:layout_constraintStart_toEndOf="@+id/alarmTimeView"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Switch
             android:id="@+id/alram_switch"
-            android:layout_width="62dp"
-            android:layout_height="56dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:checked="false"
             android:switchMinWidth="56dp"
